@@ -19,7 +19,7 @@
 .\" Formatted or processed versions of this manual, if unaccompanied by
 .\" the source, must acknowledge the copyright and authors of this work.
 .\" License.
-.\" $Id: wtt.3,v 1.2 2003-09-10 05:29:45 thep Exp $
+.\" $Id: wtt.3,v 1.3 2006-08-01 11:38:21 thep Exp $
 .TH wtt 3  "Sep 16, 2001" "Thai Linux Working Group" "libthai's Manual"
 .SH NAME
 \fBwtt\fR \- WTT I/O implementation
@@ -35,59 +35,59 @@
 \fIint\fR \fBTACio_op\fR(\fIthchar_t c1\fR, \fIthchar_t c2\fR);
 .br
 .SH DESCRIPTION
-WTT stands for Wing Tuk Tee(in Thai, Runable everywhere)(?). It is defined by TACTIS(Thai API Consortium/Thai Industrial Standard) in the NECTEC Thai Software Standard Project(1989-1991).
+WTT stands for Wing Tuk Tee (in Thai, Runs everywhere). It was defined by TACTIS (Thai API Consortium/Thai Industrial Standard) in the NECTEC Thai Software Standard Project (1989-1991), and later endorsed by Thai Industrial Standard Institute (TISI) as TIS 1566-2541 in 1998.
 .PP
-WTT had classified Thai chracter(TIS-620) into 17 types below.
+WTT classifies Thai chracter(TIS-620) into 17 types below.
 .sp
 \fITYPE  VALUE SHORT_DESCRIPTION\fR
 .br
-CTRL    0   control characters
+CTRL    0    control characters
 .br
-NON     1   non composible characters
+NON     1    non composible characters
 .br
-CONS    2   consonants
+CONS    2    consonants
 .br
-LV      3   leading vowels
+LV      3    leading vowels
 .br
-FV1     4   following vowels 1
+FV1     4    following vowels 1
 .br
-FV2     5   following vowels 2
+FV2     5    following vowels 2
 .br
-FV3     6   following vowels 3
+FV3     6    following vowels 3
 .br
-BV1     7   below vowels 1
+BV1     7    below vowels 1
 .br
-BV2     8   below vowels 2
+BV2     8    below vowels 2
 .br
-BD      9   below diacritics
+BD      9    below diacritics
 .br
-TONE    10  tonemarks
+TONE    10   tonemarks
 .br
-AD1     11  above diacritics 1
+AD1     11   above diacritics 1
 .br
-AD2     12  above diacritics 2
+AD2     12   above diacritics 2
 .br
-AD3     13  above diacritics 3
+AD3     13   above diacritics 3
 .br
-AV1     14  above vowels 1
+AV1     14   above vowels 1
 .br
-AV2     15  above vowels 2
+AV2     15   above vowels 2
 .br
-AV3     16  above vowels 3
+AV3     16   above vowels 3
 .sp
-Functions in \fBthctype\fR basically classify a character while \fBTACchtype\fR classifies a chracter in detail. Please refer to the reference.
+Functions in \fBthctype\fR do basic character classifications while \fBwtt\fR classifies a chracter in detail. Please refer to the reference.
 .sp
-\fBTACio_op\fR checks how to compose given two chracters \fIc1\fR and \fIc2\fR. The possiblities are Composible(CP), Non-display(XC), Accept(AC), Reject(RJ) and Strict Reject(SR). The values of CP, XC, AC, RJ and SR are difined in wtt.h. The followings are the meanings.
+\fBTACio_op\fR checks how to compose two given chracters. The possiblities are Composible(CP), Non-display(XC), Accept(AC), Reject(RJ) and Strict Reject(SR). The values of CP, XC, AC, RJ and SR are difined in wtt.h. And their meanings are:
 .sp
-CP : \fIc2\fR is displayed in the same cell as \fIc1\fR, also implies an acceptance. 
+CP : second character is displayed in the same cell as the first, also implies an acceptance. 
 .br
 XC : Do nothing.
 .br
-AC : Display \fIc2\fR in the next cell.
+AC : Display second character in the next cell.
 .br
-RJ : Discard \fIc2\fR, ignore it.
+RJ : Discard second character.
 .br
-SR : Reject only in the strict mode.
+SR : Reject second character only in strict mode.
 .SH RETURN VALUE
 \fBTACchtype\fR returns an interger defined in the file wtt.h.
 .br
